[package]
name = "rustwarden"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = {version = "0.8"}
argon2 = "0.4"
chacha20poly1305 = "0.10"
secrecy = "0.8"
rpassword = "7.0"
zeroize = "1.5"
arboard = "3.6.1"